--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Sign-In" name="login-view" class="login-page" back-img="bg1.jpg,bg2.jpg,bg3.jpg,bg4.jpg,bg5.jpg" back-url="/img/">
+<ion-view view-title="Sign-In" name="login-view" class="login-page" style="background: url('/img/bg4.jpg'); background-size: cover;">
     <ion-nav-bar class="bar-positive"></ion-nav-bar>
     <ion-content class="padding">
         <div class="logo-body">
@@ -25,9 +25,9 @@
             </div>
             <button class="button button-block button-positive" ng-click="login()">Sign In</button>
             <div class="button-bar">
-                <button class="button button-outline button-positive" ng-click="authenticate('facebook')">with Facebook</button>
-                <button class="button button-outline button-positive" ng-click="authenticate('google')">with Google</button>
-                <button class="button button-outline button-positive" ng-click="authenticate('twitter')">with Twitter</button>
+                <button class="button button-outline button-positive" ng-click="authenticate('facebook')">Facebook</button>
+                <button class="button button-outline button-positive" ng-click="authenticate('google')">Google</button>
+                <button class="button button-outline button-positive" ng-click="authenticate('twitter')">Twitter</button>
             </div>
             <br/>
             <div class="well">
