--- a/www/templates/owner/business.html
+++ b/www/templates/owner/business.html
@@ -12,6 +12,10 @@
                 <input type="text" placeholder="Store name" ng-model="formData.title"/>
             </label>
             <label class="item item-input item-stacked-label">
+                <span class="input-label">Slogan</span>
+                <input type="text" placeholder="Type here your slogan" ng-model="formData.slogan"/>
+            </label>
+            <label class="item item-input item-stacked-label">
                 <span class="input-label">Company Name</span>
                 <input type="text" placeholder="Company Name" ng-model="formData.company_name"/>
             </label>
