--- a/www/templates/landing.html
+++ b/www/templates/landing.html
@@ -1,8 +1,11 @@
-<ion-view view-title="My Spa 247" name="landing-view" back-img="bg1.jpg,bg2.jpg,bg3.jpg,bg4.jpg,bg5.jpg" back-url="/img/">
+<ion-view view-title="My Spa 247" name="landing-view" style="background: url('/img/bg4.jpg'); background-size: cover;">
     <ion-nav-bar class="bar-positive"></ion-nav-bar>
     <ion-content class="padding">
-        <h3 class="title text-center"> Welcome to My Spa 247</h3>
-        <p>Hundreds of witty articles have been written around the topic of landing pages. We all know the basic facts – that these are the pages a visitor reaches after clicking on a banner ad or a promotional link, and that they play a crucial marketing role by converting leads into customers for the business.</p>
+        <!--back-img="bg1.jpg,bg2.jpg,bg3.jpg,bg4.jpg,bg5.jpg" back-url="/img/"-->
+        <div class="card padding">
+            <h3 class="title text-center"> Welcome to My Spa 247</h3>
+            <p>Hundreds of witty articles have been written around the topic of landing pages. We all know the basic facts – that these are the pages a visitor reaches after clicking on a banner ad or a promotional link, and that they play a crucial marketing role by converting leads into customers for the business.</p>
+        </div>
         <button class="button button-block button-outline button-positive" ui-sref="login">Sign in</button>
         <button class="button button-block button-outline button-positive" ui-sref="signup">Sign up</button>
     </ion-content>
