--- a/www/templates/owner/dash.html
+++ b/www/templates/owner/dash.html
@@ -3,37 +3,36 @@
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
-    <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true">
+    <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true" has-footer="true">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
         <div class="row  text-center">
             <div class="col">
                 <h3 class="title">Welcome {{userProfile.username}}!</h3>
-                    This could be your Dashboard.
-                <br><br>
+                <p>This could be your Dashboard.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
-				<div class="card">
+				<div class="card" ui-sref="owner.follower">
 					<div class="item item-avatar">
 						<div class="item-pull-left"><span class="ionicons ion-person"></span></div>
 						<h2>Follower</h2>
 						<p>All follower who like your business</p>
 					</div>
 					<div class="item text-center">
-						<div class="x-large">{{data.customerSize}}</div>
+						<div class="x-large">{{data.followerSize ? data.followerSize : 'None'}} </div>
 					</div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card">
+				<div class="card" ui-sref="owner.offer">
 					<div class="item item-avatar">
 						<div class="item-pull-left"><span class="ionicons ion-pricetags"></span></div>
 						<h2>Offer</h2>
 						<p>Total offer that created by you</p>
 					</div>
 					<div class="item text-center">
-						<div class="x-large">{{data.offerSize}}</div>
+						<div class="x-large">{{data.offerSize ? data.offerSize : 'None'}} </div>
 					</div>
 				</div>
 			</div>
@@ -41,13 +40,13 @@
 		<div class="row">
 			<div class="col">
 				<div class="card">
-					<div class="item item-avatar">
+					<div class="item item-avatar" ui-sref="owner.rate">
 						<div class="item-pull-left"><span class="ionicons ion-star"></span></div>
 						<h2>Rate</h2>
 						<p>Average rate score per 5</p>
 					</div>
 					<div class="item text-center">
-						<div class="x-large">{{data.rateAverage}}</div>
+						<div class="x-large">{{data.rateAverage ? data.rateAverage : 'None'}} </div>
 					</div>
 				</div>
 			</div>
