--- a/www/templates/customer/note.html
+++ b/www/templates/customer/note.html
@@ -4,7 +4,7 @@
     </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-nav-buttons side="right">
-        <button class="button button-stable" ng-click="openModal()"><i class="ion ion-plus"></i></button>
+        <button class="button button-stable" ng-click="createNote()"><i class="ion ion-plus"></i></button>
     </ion-nav-buttons>
     <ion-content class="tabbed-content-within-sidemenu-app padding">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
@@ -14,13 +14,13 @@
         <ion-header-bar class="bar bar-header item-input-inset" ng-show="customerNotes.length > 0">
             <label class="item-input-wrapper">
                 <i class="icon ion-ios-search placeholder-icon"></i>
-                <input type="search" placeholder="Search" ng-model="formData.keyword" ng-enter="searchCustomer()"/>
+                <input type="search" placeholder="Search" ng-model="formData.keyword" ng-enter="doRefresh()"/>
             </label>
             <button class="button button-clear" ng-click="doRefresh()"><i class="ion ion-android-search"></i></button>
         </ion-header-bar>
         <ion-list show-delete="data.showDelete">
-            <ion-item class="list-item" ng-repeat="item in customerNotes">
-                <ion-delete-button class="ion-minus-circled" ng-click="doRemove(item)"></ion-delete-button>
+            <ion-item class="list-item" ng-repeat="item in customerNotes" ng-click="detailNote(item)">
+                <ion-delete-button class="ion-minus-circled" ng-click="doRemove($event,item)"></ion-delete-button>
                 <span class="item-note date-time">{{ item.created_at | asDate | date: "MMM-dd-yyyy" }}</span>
                 <p><span class="strong color-positive">Product code:</span> {{item.product_code}} / <span class="strong color-positive">Barcode:</span> {{item.barcode}}</p>
                 <p>{{ item.content }}</p>
