--- a/www/templates/partial/note-tmp.html
+++ b/www/templates/partial/note-tmp.html
@@ -1,8 +1,8 @@
 <ion-modal-view>
     <ion-header-bar class="icon-left">
-        <div class="title"><i class="icon ion-search"></i> Create Note</div>
+        <div class="title"><i class="icon ion-search"></i> {{modalTitle}}</div>
     </ion-header-bar>
-    <ion-content class="padding">
+    <ion-content class="padding" has-header="true">
         <form>
             <div class="list list-inset">
                 <label class="item item-input">
