--- a/www/templates/owner/business.html
+++ b/www/templates/owner/business.html
@@ -53,11 +53,11 @@
             </label>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Latitude</span>
-                <input type="text" placeholder="Latitude" ng-model="formData.latitude"/>
+                <input type="text" placeholder="Latitude" ng-model="formData.latitude" pattern="-?\d{1,3}\.\d+"/>
             </label>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Longtitude</span>
-                <input type="text" placeholder="Longtitude" ng-model="formData.longtitude"/>
+                <input type="text" placeholder="Longtitude" ng-model="formData.longtitude" pattern="-?\d{1,3}\.\d+"/>
             </label>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Business hour</span>
