--- a/www/templates/partial/feedback-tmp.html
+++ b/www/templates/partial/feedback-tmp.html
@@ -11,19 +11,19 @@
                     <i class="icon ion-android-star"></i>
                 </div>
             </div>
-            <div class="list list-inset">
+            <!--div class="list list-inset">
                 <label class="item item-input">
-                    <input type="text" placeholder="Service name" ng-model="feedbackData.service" auto-focus=""/>
+                    <input type="text" placeholder="Service name" ng-model="feedbackData.service"/>
                 </label>
             </div>
             <div class="list list-inset">
                 <label class="item item-input">
                     <input type="text" placeholder="Employee name" ng-model="feedbackData.employee"/>
                 </label>
-            </div>
+            </div-->
             <div class="list list-inset">
                 <label class="item item-input">
-                    <textarea placeholder="Type here your commentd" rows="8" ng-model="feedbackData.content"></textarea>
+                    <textarea placeholder="Type here your comment" rows="8" ng-model="feedbackData.content"></textarea>
                 </label>
             </div>
             <br/>
