--- a/www/templates/partial/offer-tmp.html
+++ b/www/templates/partial/offer-tmp.html
@@ -25,13 +25,13 @@
             <div class="list list-inset">
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">Discount</span>
-                    <input type="number" placeholder="Type here value off" ng-model="offerData.off"/>
+                    <input type="number" placeholder="Type here value off" ng-model="offerData.off" pattern="\d+(\.\d{2})?"/>
                 </label>
             </div>
             <div class="list list-inset">
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">Max value</span>
-                    <input type="number" placeholder="Type here max value" ng-model="offerData.off_max"/>
+                    <input type="number" placeholder="Type here max value" ng-model="offerData.off_max" pattern="\d+(\.\d{2})?"/>
                 </label>
             </div>
             <div class="list list-inset">
