--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,7 @@ select.form-control{
 }
 .popover{
   height: 380px;
+  width: 360px;
 }
 .vm-container{
   display: table !important;
@@ -179,8 +180,7 @@ select.form-control{
 /************ QR Code****************/
 .card-circle{
   border: 10px solid #ff3b30;
-  padding: 20px;
-  border-radius: 999em;
+  padding: 10px;
   #qrcode{
     display: inline-block;
   }
