--- a/www/templates/customer/feedback.html
+++ b/www/templates/customer/feedback.html
@@ -10,8 +10,8 @@
                 <div class="item-char">{{$index+1}}</div>
                 <span class="item-note date-time text-right">{{ item.created_at | asDate | date: APP_CONFIG.FORMAT.DATE }}<br/>{{ item.created_at | asDate | date: APP_CONFIG.FORMAT.TIME }}</span>
                 <p><span class="strong color-positive">Rate:</span> <star-rating ng-model="item.rate" readonly="rating.isReadonly"></star-rating></p>
-                <p><span class="strong color-positive">Service:</span> {{ item.service }} / <span class="strong color-positive">Employee:</span> {{ item.employee }}</p>
                 <p>{{ item.content }}</p>
+                <!--p><span class="strong color-positive">Service:</span> {{ item.service }} / <span class="strong color-positive">Employee:</span> {{ item.employee }}</p-->
             </ion-item>
         </div>
     </ion-content>
