--- a/www/templates/customer/info.html
+++ b/www/templates/customer/info.html
@@ -32,7 +32,7 @@
         </div>
 		<div class="button-bar">
 			<button class="button button-outline icon-left ion-android-list button-positive" ui-sref="customer.reservation">Reservation</button>
-			<button class="button button-outline icon-left ion-android-star-outline button-positive" ui-sref="customer.feedback">Feedback</button>
+			<button class="button button-outline icon-left ion-android-star-outline button-positive" ui-sref="customer.feedback({storeId:store.id})">Feedback</button>
 		</div>
         <br/><br/><br/>
     </ion-content>
