--- a/www/templates/partial/note-tmp.html
+++ b/www/templates/partial/note-tmp.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="icon-left">
         <div class="title"><i class="icon ion-search"></i> {{modalTitle}}</div>
     </ion-header-bar>
-    <ion-content class="padding" has-header="true">
+    <ion-content class="padding" has-header="true" has-footer="true">
         <form>
             <div class="list list-inset">
                 <label class="item item-input">
@@ -18,11 +18,13 @@
                 <label class="item item-input">
                     <textarea type="text" placeholder="Content" rows="8" cols="40" ng-model="noteData.content"></textarea>
                 </label>
-            </div>
-            <div class="button-bar">
-                <button class="button" ng-click="closeModal()">Cancel</button>
-                <button class="button" ng-click="saveNote()">Save</button>
             </div><br/>
         </form>
     </ion-content>
+    <ion-footer-bar class="bar bar-footer">
+        <div class="button-bar">
+            <button class="button" ng-click="closeModal()">Cancel</button>
+            <button class="button" ng-click="saveNote()">Save</button>
+        </div>
+    </ion-footer-bar>
 </ion-modal-view>
